--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,10 +22,13 @@ jobs:
         go-version: '1.22'
 
     - name: Inicia banco de dados
-      run: docker-compose up -d postgres
+      run: docker compose up -d postgres
 
     - name: Lint
-      run: docker run --rm -itv $(pwd):/app -w /app golangci/golangci-lint golangci-lint run controllers/ database/ models/ routes/
+      uses: golangci/golangci-lint-action@v8
+      with:
+        version: v2.1
+        args: controllers/ database/ models/ routers/
 
     - name: Test
       run: go test -v main_test.go
