--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -25,11 +25,10 @@ jobs:
       run: docker compose up -d postgres
 
     - name: Lint
-      run: docker run --rm -itv ${PWD}:/app -w /app golangci/golangci-lint:v2.1 golangci-lint run controllers/ database/ models/ routes/
-      # uses: golangci/golangci-lint-action@v8
-      # with:
-      #   version: v2.1
-      #   args: controllers/ database/ models/ routes/
+      uses: golangci/golangci-lint-action@v8
+      with:
+        version: v2.1
+        args: controllers/ database/ models/ routes/
 
     - name: Test
       run: go test -v main_test.go
